--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/svg+xml"
     href="/src/assets/Plantree/web icon/svg - code to change colors/plantree-05.svg" />
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Outfit:wght@400;500;700&display=swap"
     rel="stylesheet">
 
-  <title >PlanTree</title>
+  <title>PlanTree</title>
 </head>
 
 <body>
